# django-login-email

./: .buildinfo  .gitignore  .pdm-python  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  README.md  SECURITY.md  developer.html  genindex.html  index.html  manage.py  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: FUNDING.yml
.github/workflows/: gh-pages.yml
django_login_email/: admin.py  apps.py  email.py  errors.py  forms.py  iputils.py  models.py  token.py  views.py  wrap.py
django_login_email/forms/: __init__.py  register.py
django_login_email/management/commands/: list_register_record.py
django_login_email/migrations/: 0001_initial.py  0002_emaillogin_sault_emaillogin_validated_and_more.py  0003_rename_last_time_emaillogin_expired_time.py  0004_emailregister.py  0005_emailrecord_delete_emaillogin_delete_emailregister.py  0006_ipban.py  0007_rename_sault_to_salt.py
django_login_email/templates/login_email/: base.html  error.html  home.html  login.html  register.html  register_details.html  register_success.html  success.html
django_login_email/tests/: test_email.py  test_mixin.py  test_models.py  test_str.py
django_login_email/views/: __init__.py  limit.py  login.py  mixin.py  register.py  utils.py
docs/: index.rst
docs/requirements/: api-specification.md  compatibility-matrix.md  configuration-reference.md  extension-points.md  integration-requirements.md
docs/source/: conf.py  developer.rst  index.rst
settings/: asgi.py  settings.py  urls.py  wsgi.py
testapp/: apps.py  urls.py  views.py
testapp/management/commands/: create_user.py  mmigrate.py
testapp/views/: __init__.py  register.py
tests/: test_email.py  test_email_info.py  test_iputils.py  test_mixin.py  test_models.py  test_register.py  test_time.py  test_token.py
tests/ft/: test_custom_system.py  test_email.py
tests/views/: conftest.py  test_mixin.py  test_verify_mixin.py
